# Mem-RAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.codegraph/: daemon.pid
app/: main.py
app/api/: api_service.py  deps.py
app/api/v1/: auth.py  chat.py  documents.py  sessions.py
app/core/: app_file_uploder.py  config.py  config_data.py  exceptions.py  knowledge_base.py  logger.py  prompts.py  rag.py  security.py  text_splitter.py  vector_stores.py
app/db/: db_client.py  milvus_client.py  postgres_client.py
app/integrations/: bm25.py  embedding.py  llm.py
app/models/: chat.py  document.py  models.py  user.py
app/services/: document_service.py  generation_service.py  memory_service.py  rag_service.py  retrieval_service.py  session_service.py
html/: chat.html  index.html  kb.html  login.html
