[project]
name = "mem-rag"
version = "2.0.0"
description = "基于 LangChain + Milvus 的混合检索 RAG 系统，支持通义千问 / DeepSeek，含知识库管理与多会话对话"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "dashscope>=1.25.18",
    "docling>=2.95.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.0.1",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.2.2",
    "load-dotenv>=0.1.0",
    "pymilvus>=3.0.0",
    "pymysql>=1.2.0",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
